--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/InventarioReportes/INV_005.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/InventarioReportes/INV_005.cshtml
@@ -10,7 +10,7 @@
 }
 @using (Html.BeginForm("INV_005", "InventarioReportes", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
-    @Html.HiddenFor(q=>q.IdEmpresa)
+    @Html.HiddenFor(q=>q.IdEmpresa, new { @id="IdEmpresa"})
 <div class="box ">
     <div class="box-header with-border">
         <div class="row">
@@ -128,9 +128,9 @@
         <!-- /.box-footer-->
     </div>
 }
-<script>
+    <script>
     $(function () {
-        //Date picker
+        cargar_bodega();
         $('#fecha_ini').datepicker({
             autoclose: true
         })
@@ -138,6 +138,41 @@
         $('#fecha_fin').datepicker({
             autoclose: true
         })
-
     });
-</script>
+
+    $("#IdSucursal").change(function () {
+        cargar_bodega();
+    });
+
+
+    function cargar_bodega() {
+        $("#IdBodega").empty();
+
+        var sucursal = $("#IdSucursal").val();
+
+        var datos = {
+            IdEmpresa: $("#IdEmpresa").val(),
+            IdSucursal: sucursal
+        }
+
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("cargar_bodega", "InventarioReportes", new { Area = "Reportes" })',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+                $.each(data, function (i, row) {
+                    $("#IdBodega").append("<option value=" + row.IdBodega + ">" + row.bo_Descripcion + "</option>");
+                });
+            },
+            error: function (error) {
+            }
+        });
+    };
+
+
+    </script>
