--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/ActivoFijoReportes/ACTF_004.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/ActivoFijoReportes/ACTF_004.cshtml
@@ -10,7 +10,7 @@
 }
 @using (Html.BeginForm("ACTF_004", "ActivofijoReportes", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
-    @Html.HiddenFor(q=>q.IdEmpresa, new { @id = "IdEmpresa"})
+    @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
     <div class="box ">
         <div class="box-header with-border">
             <div class="row">
@@ -51,7 +51,7 @@
                     <div class="col-md-6">
                         <div class="form-group">
                             <label for="Estado_Proceso">Estado proceso</label>
-                            @Html.DropDownListFor(q => q.Estado_Proceso, new SelectList(ViewBag.lst_estado, "IdCatalogo", "Descripcion"), new { @class = "form-control" })
+                            @Html.DropDownListFor(q => q.Estado_Proceso, new SelectList(ViewBag.lst_estado, "IdCatalogo", "Descripcion"), new { @class = "form-control", @id = "Estado_Proceso" })
                             @Html.ValidationMessageFor(q => q.Estado_Proceso, "", new { @class = "text-danger" })
                         </div>
                     </div>
@@ -74,7 +74,7 @@
                     <div class="col-md-2">
                         <div class="form-group">
                             <div class="checkbox">
-                                <label for="mostrar_agrupado">@Html.CheckBoxFor(q => q.mostrar_detallado) Mostrar detallado</label>
+                                <label for="mostrar_agrupado">@Html.CheckBoxFor(q => q.mostrar_agrupado) Mostrar detallado</label>
                             </div>
                         </div>
                     </div>
@@ -82,50 +82,57 @@
             </div>
             <!-- /.box-body -->
         </div>
-                    </div>
-                    <div class="box">
-                        <div class="box-header with-border">
-                            <h3 class="box-title">@ViewBag.Title</h3>
-                            <div class="box-tools pull-right">
-                                <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="Collapse">
-                                    <i class="fa fa-minus"></i>
-                                </button>
-                                <button type="button" class="btn btn-box-tool" data-widget="remove" data-toggle="tooltip" title="Remove">
-                                    <i class="fa fa-times"></i>
-                                </button>
-                            </div>
-                        </div>
-                        <div class="box-body">
-                            @Html.DevExpress().WebDocumentViewer(settings =>
-                       {
-                           settings.ClientSideEvents.Init = "function(s, e) {s.previewModel.reportPreview.zoom(1);}";
-                           settings.MobileMode = false;
-                           settings.Name = "webDocumentViewer";
-                       }).Bind(ViewBag.Report).GetHtml()
-                        </div>
-                        <!-- /.box-body -->
-                        <div class="box-footer">
-                            [@Session["IdEmpresa"]] @Session["nom_empresa"]
-                        </div>
-                        <!-- /.box-footer-->
-                    </div>
-                    }
-        <script>
-                        $(function () {
-                            //Date picker
-                            $('#fecha_corte').datepicker({
-                                autoclose: true
-                            })
-                            cargar_categoria();
-            });
+    </div>
+    <div class="box">
+        <div class="box-header with-border">
+            <h3 class="box-title">@ViewBag.Title</h3>
+            <div class="box-tools pull-right">
+                <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="Collapse">
+                    <i class="fa fa-minus"></i>
+                </button>
+                <button type="button" class="btn btn-box-tool" data-widget="remove" data-toggle="tooltip" title="Remove">
+                    <i class="fa fa-times"></i>
+                </button>
+            </div>
+        </div>
+        <div class="box-body">
+            @Html.DevExpress().WebDocumentViewer(settings =>
+       {
+           settings.ClientSideEvents.Init = "function(s, e) {s.previewModel.reportPreview.zoom(1);}";
+           settings.MobileMode = false;
+           settings.Name = "webDocumentViewer";
+       }).Bind(ViewBag.Report).GetHtml()
+        </div>
+        <!-- /.box-body -->
+        <div class="box-footer">
+            [@Session["IdEmpresa"]] @Session["nom_empresa"]
+        </div>
+        <!-- /.box-footer-->
+    </div>
+}
+<script>
+        $(function () {
+            cargar_categoria();
+        //Date picker
+            $('#fecha_fin').datepicker({
+            autoclose: true
+        })
+
+            cargar_categoria();
+        });
+
+        $("#IdActivoFijoTipo").change(function () {
+            cargar_categoria();
+        });
 
     function cargar_categoria() {
-        $("#IdCategoriaAF").empty();
-        
-        var datos = {
+        $("#IdCategoriaAF").val();
 
-            IdEmpresa: $("#IdEmpresa").val(),
-            activo: $("#IdActivoFijoTipo").val()
+        var activo = $("#IdActivoFijoTipo").val();
+
+        var datos = {
+            IdEmpresa : $("#IdEmpresa").val(),
+            IdActivoFijoTipo: activo
         }
         $.ajax({
             type: 'POST',
@@ -145,4 +152,4 @@
             }
         });
     };
-                    </script>
+</script>
