--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/NominaTipoLiquidacion/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/NominaTipoLiquidacion/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@model Core.Erp.Info.RRHH.ro_Nomina_Tipoliqui_Info
-@{
+﻿@{
     ViewBag.Title = "Tipo liquidación de nómina";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
@@ -7,6 +6,7 @@
     }
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<script src="~/Scripts/ValidacionBotonSubmit.js"></script>
-
-@Html.Action("GridViewPartial_nomina_tipo_liquidacion");
+@using (Html.BeginForm())
+{
+    @Html.Action("GridViewPartial_nomina_tipo_liquidacion");
+}
