--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/ImportacionReportes/IMP_003.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/ImportacionReportes/IMP_003.cshtml
@@ -19,7 +19,7 @@
             </div>
             <div class="box-tools pull-right">
                 <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="Collapse">
-                    <i class="fa fa-plus"></i>
+                    <i class="fa fa-minus"></i>
                 </button>
                 <button type="button" class="btn btn-box-tool" data-widget="remove" data-toggle="tooltip" title="Remove">
                     <i class="fa fa-times"></i>
