--- a/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/CatalogoTipoAF/_GridViewPartial_catalogotipo_af.cshtml
+++ b/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/CatalogoTipoAF/_GridViewPartial_catalogotipo_af.cshtml
@@ -4,11 +4,12 @@
     {
         settings.Name = "GridView_catalogotipo_af";
         settings.CallbackRouteValues = new { Controller = "CatalogoTipoAF", Action = "GridViewPartial_catalogotipo_af" };
-
         settings.KeyFieldName = "IdTipoCatalogo";
-
         settings.Width = Unit.Percentage(100);
 
+        //Configuración para que la grilla no muestre texto completo
+        settings.SettingsBehavior.AllowEllipsisInText = true;
+        settings.SettingsResizing.ColumnResizeMode = ColumnResizeMode.NextColumn;
         //CConfiguracion responsive
         settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCellsWindowLimit;
         settings.SettingsAdaptivity.AdaptiveColumnPosition = GridViewAdaptiveColumnPosition.Right;
