--- a/ERP/Core.Erp.Web/Areas/Caja/Views/Caja/_GridViewPartial_caja.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Caja/Views/Caja/_GridViewPartial_caja.cshtml
@@ -5,6 +5,9 @@
         settings.KeyFieldName = "IdCaja";
         settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
 
+        //Configuración para que la grilla no muestre texto completo
+        settings.SettingsBehavior.AllowEllipsisInText = true;
+        settings.SettingsResizing.ColumnResizeMode = ColumnResizeMode.NextColumn;
         //CConfiguracion responsive
         settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCellsWindowLimit;
         settings.SettingsAdaptivity.AdaptiveColumnPosition = GridViewAdaptiveColumnPosition.Right;
