--- a/ERP/Core.Erp.Web/Areas/Caja/Views/CajaMovimientoEgreso/_GridViewPartial_movimiento_egresos.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Caja/Views/CajaMovimientoEgreso/_GridViewPartial_movimiento_egresos.cshtml
@@ -5,7 +5,9 @@
         settings.CallbackRouteValues = new { Controller = "CajaMovimientoEgreso", Action = "GridViewPartial_movimiento_egresos" };
         settings.KeyFieldName = "IdCbteCble";
         settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-
+        //Configuración para que la grilla no muestre texto completo
+        settings.SettingsBehavior.AllowEllipsisInText = true;
+        settings.SettingsResizing.ColumnResizeMode = ColumnResizeMode.NextColumn;
         //CConfiguracion responsive
         settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCellsWindowLimit;
         settings.SettingsAdaptivity.AdaptiveColumnPosition = GridViewAdaptiveColumnPosition.Right;
