--- a/ERP/Core.Erp.Web/Areas/Caja/Views/CajaMovimientoIngreso/_GridViewPartial_movimiento.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Caja/Views/CajaMovimientoIngreso/_GridViewPartial_movimiento.cshtml
@@ -4,7 +4,9 @@
         settings.CallbackRouteValues = new { Controller = "CajaMovimientoIngreso", Action = "GridViewPartial_movimiento" };
         settings.KeyFieldName = "IdCbteCble";
         settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-
+        //Configuración para que la grilla no muestre texto completo
+        settings.SettingsBehavior.AllowEllipsisInText = true;
+        settings.SettingsResizing.ColumnResizeMode = ColumnResizeMode.NextColumn;
         //CConfiguracion responsive
         settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCellsWindowLimit;
         settings.SettingsAdaptivity.AdaptiveColumnPosition = GridViewAdaptiveColumnPosition.Right;
