--- a/ERP/Core.Erp.Web/Areas/General/Views/Ciudad/_GridViewPartial_ciudad.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/Ciudad/_GridViewPartial_ciudad.cshtml
@@ -5,7 +5,9 @@
         settings.CallbackRouteValues = new { Controller = "Ciudad", Action = "GridViewPartial_Ciudad" , IdProvincia = ViewBag.IdProvincia , IdPais = ViewBag.IdPais };
         settings.Width = Unit.Percentage(100);
         settings.KeyFieldName = "IdCiudad";
-
+        //Configuración para que la grilla no muestre texto completo
+        settings.SettingsBehavior.AllowEllipsisInText = true;
+        settings.SettingsResizing.ColumnResizeMode = ColumnResizeMode.NextColumn;
         //CConfiguracion responsive
         settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCellsWindowLimit;
         settings.SettingsAdaptivity.AdaptiveColumnPosition = GridViewAdaptiveColumnPosition.Right;
