--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Area/_GridViewPartial_area.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Area/_GridViewPartial_area.cshtml
@@ -7,9 +7,9 @@
 
         settings.Width = Unit.Percentage(100);
         settings.KeyFieldName = "IdArea";
-
-
-
+        //Configuración para que la grilla no muestre texto completo
+        settings.SettingsBehavior.AllowEllipsisInText = true;
+        settings.SettingsResizing.ColumnResizeMode = ColumnResizeMode.NextColumn;
         settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCellsWindowLimit;
         settings.SettingsAdaptivity.AdaptiveColumnPosition = GridViewAdaptiveColumnPosition.Right;
         settings.SettingsAdaptivity.AdaptiveDetailColumnCount = 1;
