--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/GrupoContable/_GridViewPartial_grupo_cble.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/GrupoContable/_GridViewPartial_grupo_cble.cshtml
@@ -7,6 +7,9 @@
         settings.Width = Unit.Percentage(100);
         settings.KeyFieldName = "IdGrupoCble";
 
+        //Configuración para que la grilla no muestre texto completo
+        settings.SettingsBehavior.AllowEllipsisInText = true;
+        settings.SettingsResizing.ColumnResizeMode = ColumnResizeMode.NextColumn;
         //CConfiguracion responsive
         settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCellsWindowLimit;
         settings.SettingsAdaptivity.AdaptiveColumnPosition = GridViewAdaptiveColumnPosition.Right;
