--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/PeriodoContable/_GridViewPartial_periodocontable.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/PeriodoContable/_GridViewPartial_periodocontable.cshtml
@@ -7,6 +7,10 @@
         settings.CallbackRouteValues = new { Controller = "PeriodoContable", Action = "GridViewPartial_periodocontable" };
         settings.Width = Unit.Percentage(100);
         settings.KeyFieldName = "IdPeriodo";
+
+        //Configuración para que la grilla no muestre texto completo
+        settings.SettingsBehavior.AllowEllipsisInText = true;
+        settings.SettingsResizing.ColumnResizeMode = ColumnResizeMode.NextColumn;
         //CConfiguracion responsive
         settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCellsWindowLimit;
         settings.SettingsAdaptivity.AdaptiveColumnPosition = GridViewAdaptiveColumnPosition.Right;
