--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/CodigoSRI/_GridViewPartial_codigo_sri.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/CodigoSRI/_GridViewPartial_codigo_sri.cshtml
@@ -6,6 +6,9 @@
         settings.CallbackRouteValues = new { Controller = "CodigoSRI", Action = "GridViewPartial_codigo_sri", IdTipoSRI = ViewBag.IdTipoSRI };
         settings.Width = Unit.Percentage(100);
         settings.KeyFieldName = "IdCodigo_SRI";
+        //Configuración para que la grilla no muestre texto completo
+        settings.SettingsBehavior.AllowEllipsisInText = true;
+        settings.SettingsResizing.ColumnResizeMode = ColumnResizeMode.NextColumn;
         //CConfiguracion responsive
         settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCellsWindowLimit;
         settings.SettingsAdaptivity.AdaptiveColumnPosition = GridViewAdaptiveColumnPosition.Right;
