--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Proveedor/_GridViewPartial_proveedor.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Proveedor/_GridViewPartial_proveedor.cshtml
@@ -6,7 +6,9 @@
         settings.CallbackRouteValues = new { Controller = "Proveedor", Action = "GridViewPartial_proveedor" };
         settings.KeyFieldName = "IdProveedor";
         settings.Width = Unit.Percentage(100);
-
+        //Configuración para que la grilla no muestre texto completo
+        settings.SettingsBehavior.AllowEllipsisInText = true;
+        settings.SettingsResizing.ColumnResizeMode = ColumnResizeMode.NextColumn;
         //CConfiguracion responsive
         settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCellsWindowLimit;
         settings.SettingsAdaptivity.AdaptiveColumnPosition = GridViewAdaptiveColumnPosition.Right;
