--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/TipoCodigoSRI/_GridViewPartial_tipo_codigo_sri.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/TipoCodigoSRI/_GridViewPartial_tipo_codigo_sri.cshtml
@@ -5,7 +5,9 @@
         settings.CallbackRouteValues = new { Controller = "TipoCodigoSRI", Action = "GridViewPartial_tipo_codigo_sri" };
         settings.Width = Unit.Percentage(100);
         settings.KeyFieldName = "IdTipoSRI";
-
+        //Configuración para que la grilla no muestre texto completo
+        settings.SettingsBehavior.AllowEllipsisInText = true;
+        settings.SettingsResizing.ColumnResizeMode = ColumnResizeMode.NextColumn;
         //CConfiguracion responsive
         settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCellsWindowLimit;
         settings.SettingsAdaptivity.AdaptiveColumnPosition = GridViewAdaptiveColumnPosition.Right;
