--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/CatalogoFacturacion/_GridViewPartial_catalogo_fa.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/CatalogoFacturacion/_GridViewPartial_catalogo_fa.cshtml
@@ -6,7 +6,9 @@
         settings.Name = "GridViewPartial_catalogo_fa";
         settings.CallbackRouteValues = new { Controller = "CatalogoFacturacion", Action = "GridViewPartial_catalogo_fa", IdCatalogo_tipo = ViewBag.IdCatalogo_tipo };
         settings.KeyFieldName = "IdCatalogo";
-
+        //Configuración para que la grilla no muestre texto completo
+        settings.SettingsBehavior.AllowEllipsisInText = true;
+        settings.SettingsResizing.ColumnResizeMode = ColumnResizeMode.NextColumn;
         //CConfiguracion responsive
         settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCellsWindowLimit;
         settings.SettingsAdaptivity.AdaptiveColumnPosition = GridViewAdaptiveColumnPosition.Right;
