--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/CatalogoTipoFacturacion/_GridViewPartial_catalogotipo_fa.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/CatalogoTipoFacturacion/_GridViewPartial_catalogotipo_fa.cshtml
@@ -5,7 +5,9 @@
         settings.CallbackRouteValues = new { Controller = "CatalogoTipoFacturacion", Action = "GridViewPartial_catalogotipo_fa" };
         settings.Width = Unit.Percentage(100);
         settings.KeyFieldName = "IdCatalogo_tipo";
-
+        //Configuración para que la grilla no muestre texto completo
+        settings.SettingsBehavior.AllowEllipsisInText = true;
+        settings.SettingsResizing.ColumnResizeMode = ColumnResizeMode.NextColumn;
         //CConfiguracion responsive
         settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCellsWindowLimit;
         settings.SettingsAdaptivity.AdaptiveColumnPosition = GridViewAdaptiveColumnPosition.Right;
