--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/ClienteTipo/_GridViewPartial_clientetipo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/ClienteTipo/_GridViewPartial_clientetipo.cshtml
@@ -5,7 +5,9 @@
         settings.CallbackRouteValues = new { Controller = "ClienteTipo", Action = "GridViewPartial_clientetipo" };
         settings.Width = Unit.Percentage(100);
         settings.KeyFieldName = "Idtipo_cliente";
-
+        //Configuración para que la grilla no muestre texto completo
+        settings.SettingsBehavior.AllowEllipsisInText = true;
+        settings.SettingsResizing.ColumnResizeMode = ColumnResizeMode.NextColumn;
         //CConfiguracion responsive
         settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCellsWindowLimit;
         settings.SettingsAdaptivity.AdaptiveColumnPosition = GridViewAdaptiveColumnPosition.Right;
