--- a/ERP/Core.Erp.Web/Areas/General/Views/Catalogo/_GridViewPartial_catalogo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/Catalogo/_GridViewPartial_catalogo.cshtml
@@ -6,7 +6,9 @@
         settings.CallbackRouteValues = new { Controller = "Catalogo", Action = "GridViewPartial_catalogo", IdTipoCatalogo = ViewBag.IdTipoCatalogo };
         settings.Width = Unit.Percentage(100);
         settings.KeyFieldName = "CodCatalogo";
-
+        //Configuración para que la grilla no muestre texto completo
+        settings.SettingsBehavior.AllowEllipsisInText = true;
+        settings.SettingsResizing.ColumnResizeMode = ColumnResizeMode.NextColumn;
         //CConfiguracion responsive
         settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCellsWindowLimit;
         settings.SettingsAdaptivity.AdaptiveColumnPosition = GridViewAdaptiveColumnPosition.Right;
