--- a/ERP/Core.Erp.Web/Areas/General/Views/DisenadorReporte/_GridViewPartial_disenador_reporte.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/DisenadorReporte/_GridViewPartial_disenador_reporte.cshtml
@@ -5,8 +5,10 @@
         settings.Name = "GridView_disenador_reporte";
         settings.CallbackRouteValues = new { Controller = "DisenadorReporte", Action = "GridViewPartial_disenador_reporte" };
         settings.Width = Unit.Percentage(100);
-        settings.KeyFieldName = "IdReprte";
-
+        settings.KeyFieldName = "IdReporte";
+        //Configuración para que la grilla no muestre texto completo
+        settings.SettingsBehavior.AllowEllipsisInText = true;
+        settings.SettingsResizing.ColumnResizeMode = ColumnResizeMode.NextColumn;
         //CConfiguracion responsive
         settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCellsWindowLimit;
         settings.SettingsAdaptivity.AdaptiveColumnPosition = GridViewAdaptiveColumnPosition.Right;
