--- a/ERP/Core.Erp.Web/Areas/General/Views/Modulo/_GridViewPartial_modulo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/Modulo/_GridViewPartial_modulo.cshtml
@@ -6,6 +6,9 @@
         settings.CallbackRouteValues = new { Controller = "Modulo", Action = "GridViewPartial_modulo" };
         settings.Width = Unit.Percentage(100);
         settings.KeyFieldName = "CodModulo";
+        //Configuración para que la grilla no muestre texto completo
+        settings.SettingsBehavior.AllowEllipsisInText = true;
+        settings.SettingsResizing.ColumnResizeMode = ColumnResizeMode.NextColumn;
         //CConfiguracion responsive
         settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCellsWindowLimit;
         settings.SettingsAdaptivity.AdaptiveColumnPosition = GridViewAdaptiveColumnPosition.Right;
