--- a/ERP/Core.Erp.Web/Areas/General/Views/Pais/_GridViewPartial_pais.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/Pais/_GridViewPartial_pais.cshtml
@@ -6,7 +6,9 @@
         settings.CallbackRouteValues = new { Controller = "Pais", Action = "GridViewPartial_pais" };
         settings.Width = Unit.Percentage(100);
         settings.KeyFieldName = "IdPais";
-
+        //Configuración para que la grilla no muestre texto completo
+        settings.SettingsBehavior.AllowEllipsisInText = true;
+        settings.SettingsResizing.ColumnResizeMode = ColumnResizeMode.NextColumn;
         //CConfiguracion responsive
         settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCellsWindowLimit;
         settings.SettingsAdaptivity.AdaptiveColumnPosition = GridViewAdaptiveColumnPosition.Right;
