--- a/ERP/Core.Erp.Web/Areas/General/Views/Parroquia/_GridViewPartial_parroquia.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/Parroquia/_GridViewPartial_parroquia.cshtml
@@ -5,6 +5,9 @@
         settings.CallbackRouteValues = new { Controller = "Parroquia", Action = "GridViewPartial_Parroquia", IdCiudad = ViewBag.IdCiudad_Canton , IdProvincia = ViewBag.IdProvincia, IdPais = ViewBag.IdPais};
         settings.Width = Unit.Percentage(100);
         settings.KeyFieldName = "IdParroquia";
+        //Configuración para que la grilla no muestre texto completo
+        settings.SettingsBehavior.AllowEllipsisInText = true;
+        settings.SettingsResizing.ColumnResizeMode = ColumnResizeMode.NextColumn;
 
         //CConfiguracion responsive
         settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCellsWindowLimit;
