--- a/ERP/Core.Erp.Web/Areas/General/Views/Provincia/_GridViewPartial_provincia.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/Provincia/_GridViewPartial_provincia.cshtml
@@ -5,7 +5,9 @@
         settings.CallbackRouteValues = new { Controller = "Provincia", Action = "GridViewPartial_provincia", IdPais = ViewBag.IdPais };
         settings.Width = Unit.Percentage(100);
         settings.KeyFieldName = "IdProvincia";
-
+        //Configuración para que la grilla no muestre texto completo
+        settings.SettingsBehavior.AllowEllipsisInText = true;
+        settings.SettingsResizing.ColumnResizeMode = ColumnResizeMode.NextColumn;
         //CConfiguracion responsive
         settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCellsWindowLimit;
         settings.SettingsAdaptivity.AdaptiveColumnPosition = GridViewAdaptiveColumnPosition.Right;
