--- a/ERP/Core.Erp.Web/Areas/General/Views/Reporte/_GridViewPartial_reporte.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/Reporte/_GridViewPartial_reporte.cshtml
@@ -6,7 +6,9 @@
         settings.CallbackRouteValues = new { Controller = "Reporte", Action = "GridViewPartial_reporte" };
         settings.KeyFieldName = "CodReporte";
         settings.Width = Unit.Percentage(100);
-
+        //Configuración para que la grilla no muestre texto completo
+        settings.SettingsBehavior.AllowEllipsisInText = true;
+        settings.SettingsResizing.ColumnResizeMode = ColumnResizeMode.NextColumn;
         //CConfiguracion responsive
         settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCellsWindowLimit;
         settings.SettingsAdaptivity.AdaptiveColumnPosition = GridViewAdaptiveColumnPosition.Right;
