--- a/ERP/Core.Erp.Web/Areas/General/Views/TipoDocumento/_GridViewPartial_tipodocumento.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/TipoDocumento/_GridViewPartial_tipodocumento.cshtml
@@ -5,7 +5,9 @@
         settings.CallbackRouteValues = new { Controller = "TipoDocumento", Action = "GridViewPartial_tipodocumento" };
         settings.KeyFieldName = "codDocumentoTipo";
         settings.Width = Unit.Percentage(100);
-
+        //Configuración para que la grilla no muestre texto completo
+        settings.SettingsBehavior.AllowEllipsisInText = true;
+        settings.SettingsResizing.ColumnResizeMode = ColumnResizeMode.NextColumn;
         //CConfiguracion responsive
         settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCellsWindowLimit;
         settings.SettingsAdaptivity.AdaptiveColumnPosition = GridViewAdaptiveColumnPosition.Right;
