--- a/ERP/Core.Erp.Web/Areas/Importacion/Views/CatalogoImportacion/_GridViewPartial_catalogo_imp.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Importacion/Views/CatalogoImportacion/_GridViewPartial_catalogo_imp.cshtml
@@ -7,6 +7,9 @@
         settings.CallbackRouteValues = new { Controller = "CatalogoImportacion", Action = "GridViewPartial_catalogo_imp" , IdCatalogo_tipo = ViewBag.IdCatalogo_tipo };
         settings.KeyFieldName = "IdCatalogo";
 
+        //Configuración para que la grilla no muestre texto completo
+        settings.SettingsBehavior.AllowEllipsisInText = true;
+        settings.SettingsResizing.ColumnResizeMode = ColumnResizeMode.NextColumn;
         //CConfiguracion responsive
         settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCellsWindowLimit;
         settings.SettingsAdaptivity.AdaptiveColumnPosition = GridViewAdaptiveColumnPosition.Right;
