--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Grupo/_GridViewPartial_grupo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Grupo/_GridViewPartial_grupo.cshtml
@@ -6,7 +6,9 @@
         settings.CallbackRouteValues = new { Controller = "Grupo", Action = "GridViewPartial_grupo", IdEmpresa = ViewBag.IdEmpresa, IdCategoria = ViewBag.IdCategoria, IdLinea = ViewBag.IdLinea };
         settings.Width = Unit.Percentage(100);
         settings.KeyFieldName = "IdGrupo";
-
+        //Configuración para que la grilla no muestre texto completo
+        settings.SettingsBehavior.AllowEllipsisInText = true;
+        settings.SettingsResizing.ColumnResizeMode = ColumnResizeMode.NextColumn;
         //CConfiguracion responsive
         settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCellsWindowLimit;
         settings.SettingsAdaptivity.AdaptiveColumnPosition = GridViewAdaptiveColumnPosition.Right;
