--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Linea/_GridViewPartial_linea.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Linea/_GridViewPartial_linea.cshtml
@@ -5,7 +5,9 @@
         settings.CallbackRouteValues = new { Controller = "Linea", Action = "GridViewPartial_linea", IdEmpresa = ViewBag.IdEmpresa, IdCategoria = ViewBag.IdCategoria };
         settings.Width = Unit.Percentage(100);
         settings.KeyFieldName = "IdLinea";
-
+        //Configuración para que la grilla no muestre texto completo
+        settings.SettingsBehavior.AllowEllipsisInText = true;
+        settings.SettingsResizing.ColumnResizeMode = ColumnResizeMode.NextColumn;
         //CConfiguracion responsive
         settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCellsWindowLimit;
         settings.SettingsAdaptivity.AdaptiveColumnPosition = GridViewAdaptiveColumnPosition.Right;
