--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/MotivoInventario/_GridViewPartial_motivoinven.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/MotivoInventario/_GridViewPartial_motivoinven.cshtml
@@ -6,7 +6,9 @@
         settings.CallbackRouteValues = new { Controller = "MotivoInventario", Action = "GridViewPartial_motivoinven" };
         settings.KeyFieldName = "IdMotivo_Inv";
         settings.Width = Unit.Percentage(100);
-
+        //Configuración para que la grilla no muestre texto completo
+        settings.SettingsBehavior.AllowEllipsisInText = true;
+        settings.SettingsResizing.ColumnResizeMode = ColumnResizeMode.NextColumn;
         //CConfiguracion responsive
         settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCellsWindowLimit;
         settings.SettingsAdaptivity.AdaptiveColumnPosition = GridViewAdaptiveColumnPosition.Right;
