--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Subgrupo/_GridViewPartial_subgrupo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Subgrupo/_GridViewPartial_subgrupo.cshtml
@@ -5,7 +5,9 @@
         settings.CallbackRouteValues = new { Controller = "Subgrupo", Action = "GridViewPartial_subgrupo", IdEmpresa = ViewBag.IdEmpresa, IdCategoria = ViewBag.IdCategoria, IdLinea = ViewBag.IdLinea, IdGrupo = ViewBag.IdGrupo };
         settings.Width = Unit.Percentage(100);
         settings.KeyFieldName = "IdSubgrupo";
-
+        //Configuración para que la grilla no muestre texto completo
+        settings.SettingsBehavior.AllowEllipsisInText = true;
+        settings.SettingsResizing.ColumnResizeMode = ColumnResizeMode.NextColumn;
         //CConfiguracion responsive
         settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCellsWindowLimit;
         settings.SettingsAdaptivity.AdaptiveColumnPosition = GridViewAdaptiveColumnPosition.Right;
