--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/TipoMovimiento/_GridViewPartial_tipo_movimiento.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/TipoMovimiento/_GridViewPartial_tipo_movimiento.cshtml
@@ -4,7 +4,9 @@
         settings.CallbackRouteValues = new { Controller = "TipoMovimiento", Action = "GridViewPartial_tipo_movimiento" };
         settings.KeyFieldName = "IdMovi_inven_tipo";
         settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-
+        //Configuración para que la grilla no muestre texto completo
+        settings.SettingsBehavior.AllowEllipsisInText = true;
+        settings.SettingsResizing.ColumnResizeMode = ColumnResizeMode.NextColumn;
         //CConfiguracion responsive
         settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCellsWindowLimit;
         settings.SettingsAdaptivity.AdaptiveColumnPosition = GridViewAdaptiveColumnPosition.Right;
