--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/CargaFamiliar/_GridViewPartial_cargas.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/CargaFamiliar/_GridViewPartial_cargas.cshtml
@@ -3,10 +3,10 @@
     var grid = Html.DevExpress().GridView(settings => {
         settings.Name = "GridView_cargas";
         settings.CallbackRouteValues = new { Controller = "CargaFamiliar", Action = "GridViewPartial_cargas", IdEmpleado = ViewBag.IdEmpleado };
-
-
         settings.KeyFieldName = "IdCargaFamiliar";
-
+        //Configuración para que la grilla no muestre texto completo
+        settings.SettingsBehavior.AllowEllipsisInText = true;
+        settings.SettingsResizing.ColumnResizeMode = ColumnResizeMode.NextColumn;
         settings.Width = Unit.Percentage(100);
         //CConfiguracion responsive
         settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCellsWindowLimit;
