--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Vendedor/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Vendedor/Nuevo.cshtml
@@ -14,29 +14,43 @@
 
     <div class="row">
         <div class="col-md-12">
-            <div class="col-md-4">
+            <div class="col-md-2">
                 <div class="form-group">
                     <label for="Codigo">Código</label>
                     @Html.TextBoxFor(q => q.Codigo, new { @class = "form-control" })
                     @Html.ValidationMessageFor(q => q.Codigo, "", new { @class = "text-danger" })
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-2">
                 <div class="form-group">
                     <label for="ve_cedula">Cédula</label>
                     @Html.TextBoxFor(q => q.ve_cedula, new { @class = "form-control" })
                     @Html.ValidationMessageFor(q => q.ve_cedula, "", new { @class = "text-danger" })
                 </div>
             </div>
+            <div class="col-md-2">
+                <div class="form-group">
+                    <label for="ve_cedula">% Comisión</label>
+                    @Html.TextBoxFor(q => q.PorComision, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(q => q.PorComision, "", new { @class = "text-danger" })
+                </div>
+            </div>
         </div>
     </div>
     <div class="row">
         <div class="col-md-12">
-            <div class="col-md-12">
+            <div class="col-md-6">
                 <div class="form-group">
                     <label for="Ve_Vendedor">Nombre del vendedor*</label>
                     @Html.TextBoxFor(q => q.Ve_Vendedor, new { @class = "form-control" })
                     @Html.ValidationMessageFor(q => q.Ve_Vendedor, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label for="Ve_Vendedor">Nombre interno</label>
+                    @Html.TextBoxFor(q => q.NomInterno, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(q => q.NomInterno, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
